GNOME Bugzilla – Bug 755121
dahsdemux: task is signaled to stop without stop condition being set
Last modified: 2015-10-29 11:22:12 UTC
The gst_adaptive_demux_stream_free function is trying to stop the stream's download task. For this, it signals the task. But it fails to also set the stream->download_finished = TRUE, so the task will go back to sleep and only exit when the download is finished.
Created attachment 311471 [details] [review] proposed patch
Merging changed the patch substantially, it's a one liner now. commit 60f3eb15eb0e4e4fd4612f345b9725257a0034fd Author: Florin Apostol <florin.apostol@oregan.net> Date: Thu Oct 29 11:17:48 2015 +0000 dahsdemux: task is signaled to stop without stop condition being set The gst_adaptive_demux_stream_free function is trying to stop the stream's download task. For this, it signals the task. But it fails to also set the stream->download_finished = TRUE, so the task will go back to sleep and only exit when the download is finished. https://bugzilla.gnome.org/show_bug.cgi?id=755121